--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.2",
     "tech-stack-icons": "^2.0.3",
     "typescript": "5.0.4"
@@ -29,5 +31,8 @@
   "main": "next.config.js",
   "author": "Atanu Bera",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
+  }
 }
